--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,10 @@
 __pycache__/
 *.py[cod]
 *$py.class
-
+config.py
+voip.log
+audio/
+.idea/*
 # C extensions
 *.so
 
@@ -25,8 +28,6 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-audio/
-config.py
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
