--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,59 @@
-aiofiles==24.1.0
-aiohttp==3.11.14
-config==0.5.1
-Flask==3.1.0
-httpx==0.28.1
-langchain_openai==0.3.11
-peewee==3.17.9
-pydub==0.25.1
-rapidfuzz==3.12.2
-setuptools==78.1.0
+aiofiles
+aiohappyeyeballs
+aiohttp
+aiosignal
+annotated-types
+anyio
+attrs
+bcrypt
+blinker
+certifi
+charset-normalizer
+click
+colorama
+distro
+Flask
+frozenlist
+greenlet
+h11
+httpcore
+httpx
+idna
+itsdangerous
+jalali_core
+jdatetime
+Jinja2
+jiter
+jsonpatch
+jsonpointer
+langchain-core
+langchain-openai
+langsmith
+MarkupSafe
+multidict
+mysqlclient
+openai
+orjson
+packaging
+peewee
+playwright
+propcache
+pydantic>=2.5.2
+pydub
+pyee
+PyYAML
+RapidFuzz
+regex
+requests
+requests-toolbelt
+six
+sniffio
+tenacity
+tiktoken
+tqdm
+typing_extensions
+urllib3
+Werkzeug
+yarl
+zstandard
+#pyst @ file:///root/pyst
